Created a recipe page for lemon bars

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <body>
         <h1>Odin Projects</h1>
+        
+        <a href="./recipes/lemonbar.html">Lemon Bar</a>
     </body>
 </html>
 
