--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     </head>
 
     <body>
-        <h1>Odin Projects</h1>
-        
-        <a href="./recipes/lemonbar.html">Lemon Bar</a>
+        <h1>Odin Recipes</h1>
+
+        <ul>
+            <li><a href="./recipes/lemonbar.html">Lemon Bar</a></li>
+            <li><a href="./recipes/carrotcake.html">Carrot Cake</a></li>
+            <li><a href="./recipes/chaisugarcookies.html">Chai Sugar Cookies</a></li>
+        </ul>
     </body>
 </html>
 
